--- a/src/components/window/movable/container/movableWindowContainer.module.css
+++ b/src/components/window/movable/container/movableWindowContainer.module.css
@@ -14,3 +14,11 @@
 .movableWIndowContainer:hover {
   cursor: move;
 }
+
+.innerContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+}
