--- a/src/components/window/movable/title/MovableWindowTitle.module.css
+++ b/src/components/window/movable/title/MovableWindowTitle.module.css
@@ -1,7 +1,7 @@
 .titleContainer {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 2rem;
