--- a/src/components/window/movable/body/movableWindowBody.module.css
+++ b/src/components/window/movable/body/movableWindowBody.module.css
@@ -15,3 +15,19 @@
 .restrictedArea:hover {
   cursor: auto;
 }
+
+.paneContainer {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+
+}
+
+.paneContainer.pane{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
