--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,7 +122,7 @@ a {
   user-select: none;
 }
 
-.G-unselectable * {
+.G-unselectable *::not(input) {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
