feat(tree): Draw Tree Structure

--- a/src/components/file/tree/tree.module.css
+++ b/src/components/file/tree/tree.module.css
@@ -1,4 +1,4 @@
-.root {
+.rootLi {
   display: table;
   width: 100%;
   line-height: 28px;
@@ -6,3 +6,18 @@
   overflow: hidden;
 }
 
+.terminalLi {
+  display: table;
+  width: 100%;
+  line-height: 28px;
+  height: 28px;
+  overflow: hidden;
+}
+
+.nonTerminalLi {
+  display: table;
+  width: 100%;
+  line-height: 28px;
+  height: 28px;
+  overflow: hidden;
+}
