--- a/src/components/window/movable/body/movableWindowBody.module.css
+++ b/src/components/window/movable/body/movableWindowBody.module.css
@@ -20,7 +20,7 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: max-content 1fr;
 
 }
 
