--- a/src/components/window/movable/right-pane/MovableWindowRight.module.css
+++ b/src/components/window/movable/right-pane/MovableWindowRight.module.css
@@ -1,5 +1,5 @@
 .rightPaneStyle {
-  background-color: green;
+  background-color: var(--default-bg);
   width: 100%;
   height: 100%;
   border: 0.1rem #313131 solid;
