--- a/src/components/window/movable/title/MovableWindowTitle.module.css
+++ b/src/components/window/movable/title/MovableWindowTitle.module.css
@@ -8,6 +8,7 @@
   padding-left: 8px;
   padding-right: 8px;
   background-color: #fff;
+  border-bottom: 1px solid var(--weak-border-color);
   color: #000;
 }
 
