--- a/src/components/window/movable/title/MovableWindowTitle.module.css
+++ b/src/components/window/movable/title/MovableWindowTitle.module.css
@@ -13,11 +13,11 @@
 }
 
 .titleItem {
-  font-family: var(--font-title);
+  font-family: var(--font-title--family);
   letter-spacing: 0.05em;
 }
 
 .titleItem.title {
-  font-size: 1rem;
-  font-weight: 700;
+  font-size: 0.8rem;
+  font-weight: 500;
 }
