--- a/src/components/window/movable/right-pane/MovableWindowRight.module.css
+++ b/src/components/window/movable/right-pane/MovableWindowRight.module.css
@@ -1,11 +1,11 @@
-.rightPaneStyle {
+.rightPane {
   background-color: var(--default-bg);
   width: 100%;
   height: 100%;
   border: 0.1rem #313131 solid;
 }
 
-.topBarStyle {
+.topBar {
   width: 100%;
   background-color: #313131;
   height: 2.5em;
@@ -29,4 +29,20 @@
   margin-bottom: 0.2rem;
   width: 4rem;
   display: inline-block;
+}
+
+.topBarLeftGroup {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  gap: 0.4rem;
+}
+
+.topBarRightGroup {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  gap: 0.2rem;
 }
