--- a/src/components/file/browser/pane/style.module.css
+++ b/src/components/file/browser/pane/style.module.css
@@ -1,4 +1,26 @@
-.browserPane {
+.browserPaneWrapper {
   width: 100%;
   height: 100%;
+}
+
+.browserPane {
+  width: 100%;
+  height: calc(100% - 2.5rem);
+  overflow-y: auto;
+}
+
+.browserListRow {
+  display: grid;
+  border-bottom: 1px solid var(--color-border);
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 0.2rem;
+  height: 6em;
+}
+
+.folderName {
+
+}
+
+span[data-tooltip].folderName:before {
+  content: attr(data-tooltip);
 }
