--- a/src/components/window/movable/body/style.module.css
+++ b/src/components/window/movable/body/style.module.css
@@ -1,7 +1,7 @@
 .bodyContainer {
   width: 100%;
-  /* height: calc(100% - 2rem); */
-  height: 100%;
+  height: calc(100% - 2rem);
+  max-height: calc(100% - 2rem);
   padding: 8px;
   display: block;
 }
@@ -9,7 +9,6 @@
 .restrictedArea {
   width: 100%;
   height: 100%;
-  overflow: auto;
   display: block;
 }
 .restrictedArea:hover {
