--- a/src/components/window/movable/right-pane/style.module.css
+++ b/src/components/window/movable/right-pane/style.module.css
@@ -1,7 +1,10 @@
 .rightPane {
+  /* rightPane 이 폴더 목록 상단에 와서 Overflow 된 항목을 가려줌! */
+  z-index: 1000;
   background-color: var(--default-bg);
   width: 100%;
   height: 100%;
   border: 0.1rem #313131 solid;
+  overflow: hidden;
 }
 
